--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-homework-template",
+  "name": "goit-react-hw-02-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://StefanBielak.github.io/goit-react-hw-02-phonebook/",
   "dependencies": {
     "nanoid": "^5.0.2",
     "react": "^18.1.0",
