--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   },
   "devDependencies": {
     "eslint-config-react-app": "^7.0.1"
+  },
+  "imports": {
+    "#components/*": "./src/components/*",
+    "#styles/*": "./src/styles/*"
   }
 }
