--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "https://StefanBielak.github.io/goit-react-hw-04-phonebook/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "nanoid": "^5.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.1.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
