--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://StefanBielak.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "http-proxy-middleware": "^2.0.6",
     "nanoid": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
